--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,13 +3,14 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/spring_lab?useSSL=false&serverTimezone=UTC
     username: root
-    password: ESPE2019*
+    password:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   #Configuracion de JPA/Hibernate
   jpa:
     hibernate:
       ddl-auto: update
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
     properties:
       hibernate:
