--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         distribution: 'temurin'
         java-version: '17'
 
-    - name: Make gradlew executable
+    - name: Grant execute permission for Gradle
       run: chmod +x ./gradlew
 
     - name: Build with Gradle
