--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -1,35 +1,37 @@
 name: Automatic Rollback
 
 on:
-  workflow_dispatch:   # Permite ejecutarlo manualmente también
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   rollback:
     runs-on: ubuntu-latest
+    env:
+      RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
+      RENDER_SERVICE_ID: srv-d4afj66r433s73ejdkg0
 
     steps:
-      - name: Trigger rollback if deploy failed
+      - name: Listar deploys en Render
         run: |
           echo "Obteniendo lista de deploys..."
           DEPLOYS=$(curl -s -H "Authorization: Bearer $RENDER_API_KEY" \
             "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys")
 
-          LAST_SUCCESSFUL=$(echo $DEPLOYS | jq -r '.[] | select(.status=="live") | .id' | head -n 1)
+          echo "Deploys obtenidos:"
+          echo "$DEPLOYS"
+
+          LAST_SUCCESSFUL=$(echo $DEPLOYS | jq -r '.[] | select(.status=="live" or .status=="succeeded" or .status=="deployed") | .id' | head -n 1)
 
           if [ -z "$LAST_SUCCESSFUL" ]; then
-            echo "No se encontró un deploy exitoso."
-            exit 1
+              echo "No se encontró un deploy exitoso. Saltando rollback."
+              exit 0
           fi
 
-          echo "Revirtiendo al deploy exitoso: $LAST_SUCCESSFUL"
-
+          echo "Último deploy válido encontrado: $LAST_SUCCESSFUL"
+          
+          echo "Ejecutando rollback..."
           curl -X POST \
             -H "Authorization: Bearer $RENDER_API_KEY" \
             "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys/$LAST_SUCCESSFUL/redeploy"
 
-        env:
-          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-          RENDER_SERVICE_ID: srv-d4afj66r433s73ejdkg0
+          echo "Rollback ejecutado correctamente."
