--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
             exit 1
           fi
 
+      # CAMBIO PARA PROVOCAR FALLA
       - name: Ejecutar deploy en Render (fallo intencional)
         run: curl -X POST "https://url-falsa-para-probar-fallo.com"
 
@@ -53,4 +54,13 @@ jobs:
     runs-on: ubuntu-latest
     if: failure()
 
-    uses: ./.github/workflows/rollback.yml
+    steps:
+      - name: Ejecutar rollback al fallar deploy
+        run: |
+          echo "Ejecutando rollback..."
+
+          curl -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            https://api.github.com/repos/${{ github.repository }}/actions/workflows/rollback.yml/dispatches \
+            -d '{"ref":"main"}'
