--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
 
     env:
       RENDER_DEPLOY_HOOK: ${{ secrets.RENDER_DEPLOY_HOOK }}
+      APP_VERSION: ${{ github.run_number }}
 
     steps:
       - name: Confirmar deploy hook
@@ -45,22 +46,8 @@ jobs:
             exit 1
           fi
 
-      # CAMBIO PARA PROVOCAR FALLA
+
       - name: Ejecutar deploy en Render
         run: curl -X POST "$RENDER_DEPLOY_HOOK"
 
-  rollback:
-    needs: deploy
-    runs-on: ubuntu-latest
-    if: failure()
 
-    steps:
-      - name: Ejecutar rollback al fallar deploy
-        run: |
-          echo "Ejecutando rollback..."
-
-          curl -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            https://api.github.com/repos/${{ github.repository }}/actions/workflows/rollback.yml/dispatches \
-            -d '{"ref":"main"}'
