--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/spring_lab?useSSL=false&serverTimezone=UTC
     username: root
-    password:
+    password: admin
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   #Configuracion de JPA/Hibernate
