--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,56 +1,34 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline with Rollback
 
 on:
   push:
     branches:
-      - main
+      - main # O la rama que uses para desplegar
+
+# Permisos necesarios para que el job de 'deploy' pueda hacer push
+permissions:
+  contents: write
 
 jobs:
-
   build:
+    name: Build & Test
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v4
         with:
+          java-version: '21' # Ajusta tu versión de Java
           distribution: 'temurin'
-          java-version: '17'
 
-      - name: Permissions Gradlew
+      - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
-      - name: Build project
-        run: ./gradlew clean build
-
-      - name: Run tests
-        run: ./gradlew test
-
-      # --------- LITERAL D ----------
-      - name: Mostrar APP_VERSION para evidencia
-        run: |
-          echo "APP_VERSION=build-${GITHUB_RUN_NUMBER}-${GITHUB_SHA::7}"
-        shell: bash
+      - name: Build and test with Gradle
+        run: ./gradlew clean build # 'build' incluye 'test' automáticamente
 
   deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-
-    env:
-      RENDER_DEPLOY_HOOK: ${{ secrets.RENDER_DEPLOY_HOOK }}
-      APP_VERSION: ${{ github.run_number }}
-
-    steps:
-      - name: Confirmar deploy hook
-        run: |
-          if [ -z "$RENDER_DEPLOY_HOOK" ]; then
-            echo "Deploy hook vacío, no se puede desplegar."
-            exit 1
-          fi
-
-      - name: Ejecutar deploy en Render
-        run: curl -X POST "$RENDER_DEPLOY_HOOK"
+    name: Deploy to Render
+# ... (el resto del archivo no cambia) ...
