--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -15,10 +15,11 @@ jobs:
           echo "Obteniendo lista de deploys..."
           DEPLOYS=$(curl -s -H "Authorization: Bearer $RENDER_API_KEY" \
             "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys")
-
+          
+          echo "Deploys Obtenidos:"
           echo "$DEPLOYS"
 
-          LAST_SUCCESSFUL=$(echo "$DEPLOYS" | jq -r '.[] | select(.status=="live") | .id' | head -n 1)
+          LAST_SUCCESSFUL=$(echo "$DEPLOYS" | jq -r '.[] | select(.status=="live" or .status=="succeeded" or .status=="deployed") | .id' | head -n 1)
 
           if [ -z "$LAST_SUCCESSFUL" ]; then
             echo "No se encontró un deploy exitoso. No se ejecutará rollback."
@@ -29,7 +30,7 @@ jobs:
 
           curl -X POST \
             -H "Authorization: Bearer $RENDER_API_KEY" \
-            "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys/$LAST_SUCCESSFUL/rollback"
+            "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys/$LAST_SUCCESSFUL/redeploy"
 
           echo "Rollback ejecutado con éxito."
 #coment
